# prior-auth-project

./: .gitignore  README.md  README_SIMPLE.md  agent_guide.md
prior-auth-project/: .dockerignore  Dockerfile  docker-compose.yml  level1_prior_auth.py  pyproject.toml  smoke_test.py  test  test_loaders.py
prior-auth-project/data/doctor_notes/cardiology/: cases.json
prior-auth-project/data/doctor_notes/general/: cases.json
prior-auth-project/data/doctor_notes/rare_disease/: cases.json
prior-auth-project/data/doctor_notes/samples/: knee_replacement_example.txt
prior-auth-project/data/icd10_kg/: icd10_codes.json
prior-auth-project/data/insurer_policies/: policies.json
prior-auth-project/dataset/doctor_notes/: doctor_notes.xlsx
prior-auth-project/dataset/edge_cases/: edge_cases.xlsx
prior-auth-project/dataset/evaluation/: gold_standard_evaluation.xlsx
prior-auth-project/dataset/forms/: prior_auth_template.json
prior-auth-project/dataset/icd/: icd10_master.csv
prior-auth-project/dataset/payer/: payer_directory.json
prior-auth-project/dataset/policies/: cardiology_policy.criteria.json  cardiology_policy.txt  gastroenterology_policy.criteria.json  gastroenterology_policy.txt  neurology_policy.criteria.json  neurology_policy.txt  oncology_policy.criteria.json  oncology_policy.txt  orthopedic_policy.criteria.json  orthopedic_policy.txt
prior-auth-project/docs/: Policy-RAG-Flow.pptx  form-filler-architecture.html  policy-rag-architecture.html  policy-rag-explained.html
prior-auth-project/src/prior_auth/: config.py
(+55 files in other folders)
